lesson-43/k8s/example-1/network-policies/allow-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: example-1
spec:
  podSelector:
    matchLabels:
      app: http-server
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: example-2
          podSelector:
            matchLabels:
              app: http-server-2
      ports:
        - port: 8000
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: nginx
        - ipBlock:
            cidr: 93.184.216.34/32
      ports:
        - port: 80
          protocol: TCP
